<resources>
    <string name="app_name">AgendaContactos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preferencia">Preferencias</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="web">Web</string>
    <string name="todo">TODO</string>

    <string name="email">Email</string>
    <string name="telefono">Telefono</string>

    <string name="webblog">WebBlog</string>

    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="texto_a_mostrar">Texto a mostrar</string>
    <string name="telefonos">Telefonos</string>
    <string name="pagina_web">Pagina Web</string>
</resources>
