<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/ivFoto"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <EditText
        android:id="@+id/eTNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/eTDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/eTWebBlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/webblog"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:layout_weight="1"
            android:hint="@string/telefono"
            android:inputType="phone"
            />

        <ImageButton
            android:id="@+id/ibadddt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:onClick="add"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/comboboxCrear"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1">

        </Spinner>



    </LinearLayout>

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btfAcceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        android:clickable="true"
        android:padding="0dp"
        android:scaleType="fitXY"


        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etMail"
        app:srcCompat="@drawable/ic_check_black_24dp"
        app:useCompatPadding="true"
        tools:ignore="VectorDrawableCompat" />
</LinearLayout>