<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarContacto">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btmodificarcontacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="100dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_check_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btcancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="30dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_cancel_black_24dp"
        tools:ignore="VectorDrawableCompat" />




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModificarContacto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivFotoContactoModificar"
            android:layout_width="134dp"
            android:layout_height="127dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:src="@drawable/hombre"
            app:civ_border_color="#FF000000"

            />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/etNombreContactoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/etTelefonoM"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/telefono"
            android:inputType="phone"
            android:layout_weight="1"
            android:gravity="left|center"
            android:textSize="18sp"
            android:layout_marginRight="5dp"/>

        <ImageButton
            android:id="@+id/ibaddMo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginRight="5dp"
            android:onClick="addT"
            app:srcCompat="@android:drawable/ic_input_add" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefonos" />

            <Spinner
                android:id="@+id/comboboxModify"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1">

            </Spinner>
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibBorrarT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:onClick="deleteT"
            app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pagina_web" />

            <EditText
                android:id="@+id/etWebBlogM"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="Web"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/erEmailM"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/email"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/ivFotoContacto" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion" />

            <EditText
                android:id="@+id/etDireccionM"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center"
                android:text="@string/direccion"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>