<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".VistaContacto">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btmodificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="100dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_edit_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btdelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="30dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_delete_forever_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ivFotoContacto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/hombre"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                app:civ_border_color="#FF000000"

                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvNombreContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/telefonos" />

                <Spinner
                    android:id="@+id/comboboxTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1">

                </Spinner>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btllamar"
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@android:color/transparent"
                android:onClick="llamar"
                tools:srcCompat="@drawable/llamar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pagina_web" />

                <TextView
                    android:id="@+id/tvWebBlog"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/web"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btWebBLog"
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@android:color/transparent"
                android:onClick="buscar"
                android:scaleType="fitXY"
                tools:srcCompat="@drawable/detective" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/email"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/ivFotoContacto" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btemail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@android:color/transparent"
                android:onClick="email"

                android:scaleType="fitXY"
                tools:srcCompat="@drawable/email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/direccion" />

                <TextView
                    android:id="@+id/tvDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/direccion"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btDireccion"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"

                android:layout_marginRight="2dp"
                android:background="@android:color/transparent"
                android:onClick="mapas"
                android:scaleType="fitXY"
                tools:srcCompat="@drawable/mapas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibcoche"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:onClick="coche"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/ibbici"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:onClick="bici"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/ibWalk"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"

                android:background="@android:color/transparent"
                android:onClick="walk"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
